// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component Should have container classname 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="bd-notification is-success"
    >
      <p>
        Default
      </p>
      <p>
        Container
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container component Should have helper classnames 1`] = `
<DocumentFragment>
  <div
    class="container is-paddingless is-block-widescreen-only is-flex-touch is-hidden-desktop"
  >
    <div
      class="bd-notification is-success"
    >
      <p>
        Default
      </p>
      <p>
        Container
      </p>
    </div>
  </div>
</DocumentFragment>
`;
